Upgrade quarkus
Ongoing

Finally

Upgrade JDK

Back to JDK 17

Change Jandex

Remove Jacoco