@@ -1,5 +1,18 @@
 package org.trd.app.teknichrono.rest;
 
+import jakarta.inject.Inject;
+import jakarta.transaction.Transactional;
+import jakarta.ws.rs.Consumes;
+import jakarta.ws.rs.DELETE;
+import jakarta.ws.rs.GET;
+import jakarta.ws.rs.POST;
+import jakarta.ws.rs.PUT;
+import jakarta.ws.rs.Path;
+import jakarta.ws.rs.PathParam;
+import jakarta.ws.rs.Produces;
+import jakarta.ws.rs.QueryParam;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.Response;
 import org.jboss.logging.Logger;
 import org.trd.app.teknichrono.model.dto.LogDTO;
 import org.trd.app.teknichrono.model.dto.NestedChronometerDTO;
@@ -11,22 +24,8 @@ import org.trd.app.teknichrono.util.DurationLogger;
 import org.trd.app.teknichrono.util.exception.ConflictingIdException;
 import org.trd.app.teknichrono.util.exception.NotFoundException;
 
-import javax.inject.Inject;
-import javax.transaction.Transactional;
-import javax.ws.rs.Consumes;
-import javax.ws.rs.DELETE;
-import javax.ws.rs.GET;
-import javax.ws.rs.POST;
-import javax.ws.rs.PUT;
-import javax.ws.rs.Path;
-import javax.ws.rs.PathParam;
-import javax.ws.rs.Produces;
-import javax.ws.rs.QueryParam;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.Response;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Path("/logs")
@@ -99,7 +98,7 @@ public class LogEndpoint {
       Instant fromInstant = from != null ? Instant.parse(from) : Instant.now().minus(1, ChronoUnit.DAYS);
       Instant toInstant = to != null ? Instant.parse(to) : Instant.now();
       try (Stream<Log> s = this.logRepository.findLogs(chronometer, fromInstant, toInstant, pageIndex, pageSize)) {
-        return Response.ok(s.map(this.logRepository::toDTO).collect(Collectors.toList())).build();
+        return Response.ok(s.map(this.logRepository::toDTO).toList()).build();
       }
     }
   }
